--- a/inst/assets/pkgdown.css
+++ b/inst/assets/pkgdown.css
@@ -158,7 +158,7 @@ table {
 pre {
   word-wrap: normal;
   word-break: normal;
-  border: 1px solid #eee;
+  border: 0;
 }
 
 pre, code {
@@ -230,7 +230,7 @@ mark {
   margin-bottom: 10px;
 }
 
-div + div > pre.r {
-  margin-top: -40px;
-  border: 0;
+div.sourceCode + div > pre.r {
+  padding-top: 0;
+  margin-top: -10px;
 }
